--- a/www/sites/all/themes/uclalib_omega/sass/components/_pane-page-title.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_pane-page-title.scss
@@ -4,6 +4,6 @@
     font-size: 30px;
     font-weight: 100;
     color: $ucla-blue;
-    margin: 0.9em 0;
+    margin: 27px 0;
   }
 }
