--- a/www/sites/all/themes/uclalib_omega/sass/regions/_top.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/regions/_top.scss
@@ -3,16 +3,11 @@
   margin: 0;
   padding: 0;
   position: relative;
+  float: left;
+  width: 100%;
+  @include clearfix;
   .panel-pane {
     margin: 24px 0;
-    &:first-child {
-      margin-top: 0;
-      padding-top: 24px;
-    }
-    &:last-child {
-      margin-bottom: 0;
-      padding-bottom: 24px;
-    }
   }
 }
 
